css/rollingarchives.css
#pagetrack #dragHelper {
	overflow: visible !important;
}

#rollingarchives {
	position: relative;
	padding: 10px 0 20px;
	display: block;
	}

#rollingarchives a:hover {
	text-decoration: underline;
	}

#rollnavigation {
	position: relative;
	}

#rollnavigation a:active, #rollnavigation a:focus {
	outline: none;
	}

#rollprevious,
#rollnext,
#rollload,
#rollhome,
#rollpages,
#rolldates {
	position: absolute;
	top: 3px;
	}

#rollprevious:hover,
#rollnext:hover,
#rollhome:hover {
	text-decoration: underline;
	cursor: pointer;
	}

#rollhome {
	display: none;
	left: 54px;
	background: url('../images/house.png') no-repeat center center;
	width: 16px;
	height: 16px;
	}

#rollload {
	top: 1px;
	right: 150px;
	background: url('../images/spinner.gif') no-repeat center center;
	width: 16px;
	height: 16px;
	}

#rollload span,
#rollhome span {
	display: none;
	}

#rollnext,
#rollprevious {
	color: #666;
	font-weight: bold;
	}

#rollpages {
	top: 3px;
	left: 55px;
	color: #aaa;
	}

#rollhover {
	position: absolute;
	top: 7px;
	left: -47px;
	z-index: 100;
	height: 45px;
	background: url('../images/rollhover.png') no-repeat center top;
	}

#rollhover,
#rolldates {
	width: 100px;
}

#rolldates {
	position: absolute;
	color: #999;
	text-align: center;
	font-size: .9em;
	}

#rolldates {
	top: 22px;
	}

#rollprevious {
	left: 0;
	text-align: left;
	}

#rollnext {
	right: 0;
	text-align: right;
	}

.emptypage #rollnavigation {
	visibility: hidden;
	}

.firstpage #rollprevious {
	visibility: visible;
	}


.firstpage #rollnext,
.firstpage #rollhome {
	visibility: hidden;
	}

.nthpage #rollnext,
.nthpage #rollprevious,
.nthpage #rollhome {
	visibility: visible;
	}

.lastpage #rollnext,
.lastpage #rollhome {
	visibility: visible;
	}

.lastpage #rollprevious {
	visibility: hidden;
	}

#pagetrackwrap {
	position: absolute;
	top: 6px;
	left: 125px;
	width: 200px;
	padding-right: 4px;
	background: url('../images/sliderbgright.png') no-repeat right center;
	}

#pagetrack {
	height: 7px;
	background: url('../images/sliderbgleft.png') no-repeat left center;
	}

#pagehandle {
	width: 7px;
	height: 7px;
	background: url('../images/sliderhandle.png') no-repeat center center;
	cursor: col-resize;
	}

#primarycontent {
	clear: both;
	}

div.trimmed .hentry {
	background: #eee;
	}

div.trimmed .hentry.alt {
	background: transparent;
	}

.firstpage #texttrimmer {
	display: none;
	}

#texttrimmer {
	position: absolute;
	width: 100px;
	height: 15px;
	top: 10px;
	right: 60px;
	}

.firstpage #pagetrackwrap {
	visibility: hidden;
	}

.nthpage #pagetrackwrap {
	visibility: visible;
	}

#trimmertrackwrap {
	background: url('../images/sliderbgright.png') no-repeat right center;
	height: 7px;
	width: 50px;
	top: 6px;
	left: 25px;
	padding-right: 4px;
	position: absolute;
	}

#trimmertrack {
	background: url('../images/sliderbgleft.png') no-repeat left center;
	height: 7px;
	}

#trimmerhandle {
	width: 7px;
	height: 7px;
	background: url('../images/sliderhandle.png') no-repeat center center;
	cursor: col-resize;
	}

#trimmermore,
#trimmerless {
	position: absolute;
	top: 0;
	height: 16px;
	width: 16px;
	}

#trimmermore span,
#trimmerless span {
	display: none;
	}

#trimmermore:hover,
#trimmerless:hover {
	cursor: pointer;
	}

#trimmermore {
	right: 0;
	background: url('../images/trim_more.png');
	}

#trimmerless {
	left: 0;
	background: url('../images/trim_less.png');
	}

